src/snapshots/alma__parser__tests__test_expression__binary_operators-2.snap
---
source: src/parser.rs
assertion_line: 2433
expression: "parse(\"1 - -5\")"
---
Input:

1 - -5

Result:

Index(
    4,
)

{
    Index(
        0,
    ): Expression {
        span: Index(
            2,
        ),
        expr: Float(
            5.0,
        ),
    },
    Index(
        1,
    ): Expression {
        span: Index(
            1,
        ),
        expr: Identifier {
            module: Some(
                ModuleName {
                    parts: [
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 3,
                            },
                            span: Index(
                                5,
                            ),
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 3,
                    },
                },
            ),
            identifier: Identifier(
                Identifier {
                    name: SymbolU32 {
                        value: 4,
                    },
                    span: Index(
                        1,
                    ),
                },
            ),
        },
    },
    Index(
        2,
    ): Expression {
        span: Index(
            0,
        ),
        expr: Float(
            1.0,
        ),
    },
    Index(
        3,
    ): Expression {
        span: Index(
            4,
        ),
        expr: Unary {
            op: Unary {
                span: Index(
                    3,
                ),
                typ: Minus,
            },
            expression: Index(
                0,
            ),
        },
    },
    Index(
        4,
    ): Expression {
        span: Index(
            6,
        ),
        expr: Binary {
            expression: Index(
                1,
            ),
            op: Binop {
                typ: Substraction,
                precedence: 14,
                associativity: Ltr,
            },
            arguments: [
                Index(
                    2,
                ),
                Index(
                    3,
                ),
            ],
        },
    },
}

{
    Index(
        0,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            0,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            3,
        ),
        end: Index(
            3,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            3,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            0,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            3,
        ),
    },
}
