src/snapshots/alma__parser__tests__test_expression__binary_operators.snap
---
source: src/parser.rs
assertion_line: 2279
expression: "parse(\"1 - 5\")"
---
Input:

1 - 5

Result:

Index(
    3,
)

{
    Index(
        0,
    ): Expression {
        span: Index(
            1,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Identifier {
            module: None,
            identifier: Identifier(
                Identifier {
                    name: SymbolU32 {
                        value: 3,
                    },
                    span: Index(
                        1,
                    ),
                },
            ),
        },
    },
    Index(
        1,
    ): Expression {
        span: Index(
            0,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Float(
            1.0,
        ),
    },
    Index(
        2,
    ): Expression {
        span: Index(
            2,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Float(
            5.0,
        ),
    },
    Index(
        3,
    ): Expression {
        span: Index(
            3,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Binary {
            expression: Index(
                0,
            ),
            op: Binop {
                typ: Substraction,
                precedence: 14,
                associativity: Ltr,
            },
            arguments: [
                Index(
                    1,
                ),
                Index(
                    2,
                ),
            ],
        },
    },
}

{
    Index(
        0,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            0,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            2,
        ),
    },
}
