src/snapshots/alma__parser__tests__test_expression__bool.snap
---
source: src/parser.rs
assertion_line: 2131
expression: "parse(\"True\")"
---
Input:

True

Result:

Node {
    start: Idx(
        0,
    ),
    end: Idx(
        0,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Bool(
            true,
        ),
    },
}
