src/snapshots/alma__parser__tests__test_expression__camel_case_identifier.snap
---
source: src/parser.rs
assertion_line: 2149
expression: "parse(\"variableOne\")"
---
Input:

variableOne

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        0,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Identifier(
            None,
            Identifier(
                Node {
                    start: Index(
                        0,
                    ),
                    end: Index(
                        0,
                    ),
                    value: Identifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ),
        ),
    },
}
