src/snapshots/alma__parser__tests__test_expression__emoji_string.snap
---
source: src/parser.rs
assertion_line: 2167
expression: "parse(\"\\\"😄\\\"\")"
---
Input:

"😄"

Result:

Node {
    start: Idx(
        0,
    ),
    end: Idx(
        0,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: String_(
            SymbolU32 {
                value: 1,
            },
        ),
    },
}
