src/snapshots/alma__parser__tests__test_expression__empty_string.snap
---
source: src/parser.rs
assertion_line: 2014
expression: "parse(\"\\\"\\\"\")"

---
Input:

""

Result:

Node {
    start: 0,
    end: 2,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: String_(
            SymbolU32 {
                value: 1,
            },
        ),
    },
}
