src/snapshots/alma__parser__tests__test_expression__float.snap
---
source: src/parser.rs
assertion_line: 2148
expression: "parse(\"123.2\")"
---
Input:

123.2

Result:

Node {
    start: 0,
    end: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Float(
            123.2,
        ),
    },
}
