src/snapshots/alma__parser__tests__test_expression__function_call-2.snap
---
source: src/parser.rs
assertion_line: 2237
expression: "parse(\"fun\\n arg\")"
---
Input:

fun
 arg

Result:

Expression {
    span: Index(
        2,
    ),
    typ: RefCell {
        value: None,
    },
    expr: FnCall {
        function: Expression {
            span: Index(
                0,
            ),
            typ: RefCell {
                value: None,
            },
            expr: Identifier {
                module: None,
                identifier: Identifier(
                    Identifier {
                        name: SymbolU32 {
                            value: 1,
                        },
                        span: Index(
                            0,
                        ),
                    },
                ),
            },
        },
        arguments: [
            Expression {
                span: Index(
                    1,
                ),
                typ: RefCell {
                    value: None,
                },
                expr: Identifier {
                    module: None,
                    identifier: Identifier(
                        Identifier {
                            name: SymbolU32 {
                                value: 2,
                            },
                            span: Index(
                                1,
                            ),
                        },
                    ),
                },
            },
        ],
    },
}
