src/snapshots/alma__parser__tests__test_expression__function_call-3.snap
---
source: src/parser.rs
assertion_line: 2194
expression: "parse(\"  fun\\n    arg\")"
---
Input:

  fun
    arg

Result:

Node {
    start: Index(
        0,
    ),
    end: Index(
        1,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: Index(
                    0,
                ),
                end: Index(
                    0,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        None,
                        Identifier(
                            Node {
                                start: Index(
                                    0,
                                ),
                                end: Index(
                                    0,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    ),
                },
            },
            [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        1,
                    ),
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier(
                            None,
                            Identifier(
                                Node {
                                    start: Index(
                                        1,
                                    ),
                                    end: Index(
                                        1,
                                    ),
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 2,
                                        },
                                    },
                                },
                            ),
                        ),
                    },
                },
            ],
        ),
    },
}
