src/snapshots/alma__parser__tests__test_expression__function_call-6.snap
---
source: src/parser.rs
assertion_line: 2205
expression: "parse(\"hello ()\")"
---
Input:

hello ()

Result:

Node {
    start: Idx(
        0,
    ),
    end: Idx(
        2,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: Idx(
                    0,
                ),
                end: Idx(
                    0,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        None,
                        Identifier(
                            Node {
                                start: Idx(
                                    0,
                                ),
                                end: Idx(
                                    0,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    ),
                },
            },
            [
                Node {
                    start: Idx(
                        1,
                    ),
                    end: Idx(
                        2,
                    ),
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Unit,
                    },
                },
            ],
        ),
    },
}
